# preprocessing-pipeline

./: .flake8  .gitignore  .gitlab-ci.yml  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build-and-test.yml
pipeline/: __init__.py  artifact_remover.py  chextractor.py  chwindower.py  decorrelate.py  ext.py  extractor.py  feature_union.py  featurizer.py  filter.py  funcs.py  function_transformer.py  interpolator.py  lag.py  optional_transformer.py  pairer.py  pca.py  polydetrend.py  psdbinner.py  transform_pipeline.py  utils.py  windower.py
pipeline/inline/: __init__.py  extractor.py  windower.py
pipeline/masked/: __init__.py  mask.py  masker.py  metrics.py  minmax_scaler.py  polydetrend.py  psdbinner.py  psdestimator.py  temporal_filter.py
pipeline/masked/mne/: __init__.py  labeler.py
pipeline/mne/: __init__.py  csp.py  labeler.py  temporal_filter.py
preprocessingpipeline/: __init__.py  ext.py  feature_union.py  funcs.py  function_transformer.py  interpolator.py  pca.py  psdbinner.py  transform_pipeline.py  windower.py
preprocessingpipeline/inline/: extractor.py  psdbinner.py
preprocessingpipeline/masked/: __init__.py  psdbinner.py  psdestimator.py  standard_scaler.py  temporal_filter.py
preprocessingpipeline/mne/: csp.py  labeler.py  vectorizer.py
tests/data/: artifact.p  example_data_20220101162641.p  sample.p
tests/pipeline/: test_binner.py  test_ext.py  test_extractor.py  test_featurizer.py  test_filterer.py  test_pipeline.py  test_utils.py  test_windower.py
tests/pipeline/inline/: test_inline_windower.py
(+1 files in other folders)
