[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "preprocessing-pipeline"
version = "0.3.4"
description = "Preprocessing pipeline for neural feature extraction"
authors = [ { name = "Kevin Davis", email = "kevin.davis@miami.edu" } ]
dependencies = [
    "scikit-learn"
]

[tools.setuptools.packages.find]
exclude = ["tests"]
